deploy/k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  annotations:
    # 🔥 [加入這行] 告訴 Reloader：只要 configmap 或 secret 變了，就重啟我
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
      - name: chat-service
        image: neo1202/chat-service # 部署用
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
  - port: 8080
    targetPort: 8080
